--- a/index.html
+++ b/index.html
@@ -757,6 +757,7 @@ html[data-theme="dark"] .aud-btn.active {
 
 <!-- Moved this here -->
 </div>
+</div>
 
 <!-- =============================================== -->
 <!--  COLLAPSIBLE — ENGINEERS / CRYPTOGRAPHERS AREA -->
