--- a/index.html
+++ b/index.html
@@ -839,30 +839,49 @@ html[data-theme="dark"] .aud-btn.active {
 <!-- ✅ COLLAPSIBLE TEST EXAMPLE (DEFAULT CLOSED) -->
 <!-- =============================================== -->
 
-<details class="novak-collapse" style="margin-top:32px;">
-  <summary style="cursor:pointer; font-size:18px; padding:12px 0;">
-    🧪 TEST Example — Click to Expand
-  </summary>
+<div class="card" style="padding:22px; margin-top:12px;">
 
-  <div class="card" style="padding:22px; margin-top:12px;">
+  <h2 class="section-title" style="font-size:22px;">Try It — Prove Integrity Yourself</h2>
 
-    <h2 class="section-title" style="font-size:22px;">Try It — Prove Integrity Yourself</h2>
+  <p>
+    If you type exactly <strong>TEST</strong>, all in capitals, in the
+    below text field, what SHA-256 will output in the Cryptographic
+    Hashes area below the example datasets is:
+  </p>
 
-    <p>If you type exactly <strong>TEST</strong>, all in capitals, in the below text field, what SHA-256 will output in the Cryptographic Hashes area below the example datasets is:</p>
-<br>
-    <p><strong>TEST</strong> → 94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22c2</p>
-<br>
-    <p>Change one thing and it all changes</p>
-<br>
-    <p>
-      Test → 532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25<br>
-      test → 9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08<br>
-      tEsT → 876c5e143c421959adff3ed91b82556c433a279b6369e70592d2c9dc73455ce
-    </p>
-<br>
-    <p>Type, paste, or modify anything below — NOVAK instantly generates cryptographic hashes locally using your device. Nothing is stored, logged, transmitted, or uploaded.</p>
+  <div style="margin-top:14px; font-size:16px; line-height:1.5;">
+
+    <strong>TEST →</strong>
+    <div style="word-break:break-all; white-space:normal; margin-top:6px;">
+      94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22c2
+    </div>
+
+    <p style="margin-top:18px;">Change one thing and it all changes</p>
+
+    <strong>Test →</strong>
+    <div style="word-break:break-all; white-space:normal; margin-top:6px;">
+      532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25
+    </div>
+
+    <strong>test →</strong>
+    <div style="word-break:break-all; white-space:normal; margin-top:6px;">
+      9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08
+    </div>
+
+    <strong>tEsT →</strong>
+    <div style="word-break:break-all; white-space:normal; margin-top:6px;">
+      876c5e143c421959adff3ed91b82556c433a279b6369e70592d2c9dc73455ce
+    </div>
 
   </div>
+
+  <p style="margin-top:22px;">
+    Type, paste, or modify anything below — NOVAK instantly generates cryptographic
+    hashes locally using your device. Nothing is stored, logged, transmitted, or uploaded.
+  </p>
+
+</div>
+
 </details>
 
 <!-- =============================================== -->
