--- a/index.html
+++ b/index.html
@@ -839,48 +839,123 @@ html[data-theme="dark"] .aud-btn.active {
 <!-- ✅ COLLAPSIBLE TEST EXAMPLE (DEFAULT CLOSED) -->
 <!-- =============================================== -->
 
-<div class="card" style="padding:22px; margin-top:12px;">
+<div class="card" style="padding:26px; margin-top:12px;">
 
-  <h2 class="section-title" style="font-size:22px;">Try It — Prove Integrity Yourself</h2>
+  <h2 class="section-title" style="font-size:24px; margin-bottom:12px;">
+    Try It — Prove Integrity Yourself
+  </h2>
 
-  <p>
-    If you type exactly <strong>TEST</strong>, all in capitals, in the
-    below text field, what SHA-256 will output in the Cryptographic
-    Hashes area below the example datasets is:
+  <p style="font-size:16px; line-height:1.6;">
+    If you type exactly <strong>TEST</strong>, all in capitals, into the field below,
+    NOVAK will generate the following cryptographic result:
   </p>
 
-  <div style="margin-top:14px; font-size:16px; line-height:1.5;">
+  <!-- ========================== -->
+  <!--   SINGLE HASH EXAMPLE      -->
+  <!-- ========================== -->
 
+  <div style="margin-top:22px; font-size:17px;">
     <strong>TEST →</strong>
-    <div style="word-break:break-all; white-space:normal; margin-top:6px;">
-      94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22c2
-    </div>
 
-    <p style="margin-top:18px;">Change one thing and it all changes</p>
+    <div class="hash-box">
+      94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22c2
+      <button class="copy-btn" onclick="copyHash(this)">📋</button>
+    </div>
+  </div>
+
+  <p style="margin-top:22px; font-weight:600; font-size:16px;">
+    Change one thing — and the entire result changes:
+  </p>
+
+  <!-- ========================== -->
+  <!--    MULTIPLE HASH BLOCKS    -->
+  <!-- ========================== -->
+
+  <div style="margin-top:12px; font-size:16px; line-height:1.6;">
 
     <strong>Test →</strong>
-    <div style="word-break:break-all; white-space:normal; margin-top:6px;">
+    <div class="hash-box">
       532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25
+      <button class="copy-btn" onclick="copyHash(this)">📋</button>
     </div>
 
-    <strong>test →</strong>
-    <div style="word-break:break-all; white-space:normal; margin-top:6px;">
+    <strong style="margin-top:16px; display:block;">test →</strong>
+    <div class="hash-box">
       9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08
+      <button class="copy-btn" onclick="copyHash(this)">📋</button>
     </div>
 
-    <strong>tEsT →</strong>
-    <div style="word-break:break-all; white-space:normal; margin-top:6px;">
+    <strong style="margin-top:16px; display:block;">tEsT →</strong>
+    <div class="hash-box">
       876c5e143c421959adff3ed91b82556c433a279b6369e70592d2c9dc73455ce
+      <button class="copy-btn" onclick="copyHash(this)">📋</button>
     </div>
 
   </div>
 
-  <p style="margin-top:22px;">
-    Type, paste, or modify anything below — NOVAK instantly generates cryptographic
-    hashes locally using your device. Nothing is stored, logged, transmitted, or uploaded.
+  <p style="margin-top:26px; font-size:16px; line-height:1.6;">
+    Type, paste, or modify anything in the box below — NOVAK instantly generates
+    cryptographic hashes locally on your device. Nothing is ever stored, logged,
+    transmitted, or uploaded.
   </p>
 
 </div>
+
+<!-- =============================== -->
+<!--   CSS FOR BEAUTIFUL HASH BOXES  -->
+<!-- =============================== -->
+<style>
+.hash-box {
+  margin-top:6px;
+  background: var(--card);
+  border: 1px solid var(--border);
+  padding: 12px 14px;
+  border-radius: 8px;
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 14px;
+  line-height: 1.45;
+  white-space: normal;
+  word-break: break-all;
+  position: relative;
+  transition: 0.2s;
+}
+
+.hash-box:hover {
+  border-color: var(--blue);
+}
+
+.copy-btn {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  background: var(--bg);
+  border: 1px solid var(--border);
+  border-radius: 6px;
+  font-size: 13px;
+  cursor: pointer;
+  padding: 2px 6px;
+  transition: 0.2s;
+}
+
+.copy-btn:hover {
+  background: var(--blue);
+  color: white;
+  border-color: var(--blue);
+}
+</style>
+
+<!-- =============================== -->
+<!--   COPY FUNCTION (WORKS ANYWHERE) -->
+<!-- =============================== -->
+<script>
+function copyHash(btn) {
+  const text = btn.parentElement.innerText.trim();
+  navigator.clipboard.writeText(text);
+  btn.innerText = "✔️";
+  setTimeout(() => btn.innerText = "📋", 900);
+}
+</script>
+
 
 </details>
 
