--- a/index.html
+++ b/index.html
@@ -1090,9 +1090,11 @@ function copyHash(btn) {
       <!-- VERIFY ANY FILE -->
       <h3 style="margin-top:28px; font-size:18px;">Verify Any File</h3>
 
-      <p style="margin-top:6px; font-size:13px; opacity:0.85;">
-        🚫 Never use real patients, real claims, or real medical documents here — training data only.
-      </p>
+<p style="margin-top:6px; font-size:13px; opacity:0.85;">
+🚫This public demo is for educational purposes only — NOT for HIPAA-regulated environments.
+  Never use real patients, real claims, or real medical documents here — training data only.
+  NOVAK does not collect, store, transmit, or retain data, but user responsibility applies.
+</p>
 
       <p>
         Upload a PDF, medical record, scanned document, CSV, screenshot, or legal filing —
@@ -1114,9 +1116,11 @@ function copyHash(btn) {
       <!-- VALIDATE STRUCTURED DATA -->
       <h3 style="margin-top:0; font-size:18px;">Validate Structured Data</h3>
 
-      <p style="font-size:13px; opacity:0.85;">
-        🚫 Never use real patients, real claims, or real medical documents here — training data only.
-      </p>
+<p style="margin-top:6px; font-size:13px; opacity:0.85;">
+🚫This public demo is for educational purposes only — NOT for HIPAA-regulated environments.
+  Never use real patients, real claims, or real medical documents here — training data only.
+  NOVAK does not collect, store, transmit, or retain data, but user responsibility applies.
+</p>
 
       <p>
         Upload JSON, SQL, XML, or TXT — NOVAK proves the structured data hasn’t changed before execution.
